feat: add server middlewares and routes
